# fastapi-client-generator

./: .gitignore  README.md  pyproject.toml  test.py
.github/workflows/: ci.yml  release.yml
assets/: openapi-mock.json
demo_client/: __init__.py  client.py
demo_client/endpoints/: _endpoint.py  addresses_endpoint.py  auth_login_endpoint.py  auth_register_endpoint.py  bad_path_method_no_2xx_response_available_endpoint.py  bad_path_method_no_summary_endpoint.py  bad_path_parameters_no_schema_attached_endpoint.py  cart_endpoint.py  cart_items_endpoint.py  checkout_endpoint.py  endpoint_with_description_endpoint.py  good_path_parameters_query_parameter_as_ref_endpoint.py  items_endpoint.py  items_item_id_endpoint.py  orders_endpoint.py  orders_order_id_endpoint.py  products_endpoint.py  products_id_endpoint.py  root_endpoint.py
demo_client/schemas/: address_schema.py  all_of_schema_schema.py  any_of_schema_schema.py  base_schema.py  cart_item_schema.py  complex_array_schema.py  empty_property_schema.py  http_validation_error_schema.py  item_create_alias_schema.py  item_create_schema.py  item_empty_array_schema.py  item_list_response_schema.py  item_reserved_keyword_schema.py  item_schema.py  nested_list_schema_schema.py  one_of_schema_schema.py  order_schema.py  product_schema.py  self_ref_schema_schema.py  validation_error_schema.py
demo_client/utils/: request_base.py
mermaid/: class-diagram.mmd
src/fastapi_client_generator/: __init__.py  cli.py  client.py
src/fastapi_client_generator/interfaces/: builder_interface.py  processor_interface.py
src/fastapi_client_generator/processors/: endpoint_processor.py  post_processor.py  pre_processor.py  schema_processor.py  utils_processor.py
src/fastapi_client_generator/shared/: config.py  file_manager.py  template_enum.py  utils.py
src/fastapi_client_generator/templates/: client_base_template.jinja  client_init_template.jinja  endpoint_method_template.jinja  (+5 more)
tests/: cli_test.py  client_test.py  conftest.py  fastapi_instance.py
(+10 files in other folders)
