[project]
name = "fastapi-client-generator"
version = "1.0.1"
description = "Add your description here"
authors = [{ name = "Michael Holstein", email = "michael@holstein.email" }]
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }


dependencies = [
    "fastapi>=0.121.3",
    "jinja2>=3.1.6",
    "pydantic>=2.10.6",
    "requests>=2.32.4",
    "ruff>=0.14.2",
    "typer>=0.20.0",
]


[project.urls]
Homepage = "https://github.com/MichaelPHolstein/fastapi-client-generator"
Repository = "https://github.com/MichaelPHolstein/fastapi-client-generator"


[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "defusedxml>=0.7.1",
    "genbadge>=1.1.3",
    "pytest>=8.3.5",
    "pytest-cov>=5.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.coverage.run]
omit = ["src/fastapi_client_generator/templates/*"]

[project.scripts]
fastapi-client-generator = "fastapi_client_generator.cli:cli"
